Harden visual draft persistence guards